# geany-xml-encode

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  autogen.sh  bootstrap  configure.ac
build-aux/: .gitignore
m4/: geany.m4
po/: LINGUAS  POTFILES.in  eo.po  es.po  fr.po  ja.po
src/: Makefile.am  encode.c  encode.h  signals.c  signals.h  xml-encode.c
